fixed burger menu alignement issue

--- a/wdr-1-home.css
+++ b/wdr-1-home.css
@@ -115,9 +115,9 @@
 
 
 /* Small NAV */
-@media only screen and (max-width: 1024px) {
+/* @media only screen and (max-width: 1024px) {
     /* .main-header {                                                                 
     
     } */
     
-}
+/* }  */
